[package]
name = "pdf2image-cli"
version = "0.1.0"
edition = "2024"
author = ["Darix samani siewe"]
description = "A command-line application that converts PDF files into images."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/darixsamani/pdf2image-cli"

exlude = ["images", ".*"]
include = ["/src", "libpdfium.so"]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
image = "0.25.8"
pdfium-render = "0.8.35"
