[package]
name = "pdf2image-cli"
version = "0.1.1"
edition = "2024"
author = ["Darix samani siewe <samanidarix@gmail.com>"]
description = "A command-line application that converts PDF files into images."
readme = "README.md"
keywords = ["pdf", "cli", "pdf2images", "pdf2image", "images"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/darixsamani/pdf2image-cli"

categories = ["Command line utilities", "Command-line interface", ""]

exlude = ["images", ".*"]
include = ["/src", "libpdfium.so"]


[[bin]]
name = "pdf2images"
path = "src/main.rs"


[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
image = "0.25.8"
pdfium-render = "0.8.35"
